// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 lpfmhn FormField__FormFieldBox-sc-m9hood-0 bNDIlh RadioInput__StyledFormField-sc-1brmdkl-0 kpNcUU"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 htzMXV FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 fnmFBu"
          disabled=""
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gAZfpK StyledRadioButton-sc-g1f6ld-5 hNMTMW"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 gjwrmF"
              disabled=""
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hBJvZo StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 beixsF"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 bMBtIZ"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 lpfmhn FormField__FormFieldBox-sc-m9hood-0 bNDIlh RadioInput__StyledFormField-sc-1brmdkl-0 kpNcUU"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 htzMXV FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kvJkVD"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gAZfpK StyledRadioButton-sc-g1f6ld-5 hNMTMW"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fhNmLR"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hBJvZo StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 beixsF"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 bMBtIZ"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 lpfmhn FormField__FormFieldBox-sc-m9hood-0 bNDIlh RadioInput__StyledFormField-sc-1brmdkl-0 kpNcUU"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 eqjVSW"
        for="some-input"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 htzMXV FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kvJkVD"
          for="some-input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gAZfpK StyledRadioButton-sc-g1f6ld-5 hNMTMW"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fhNmLR"
              id="some-input"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hBJvZo StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 beixsF"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 bMBtIZ"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 lpfmhn FormField__FormFieldBox-sc-m9hood-0 bNDIlh RadioInput__StyledFormField-sc-1brmdkl-0 kpNcUU"
      tabindex="0"
    >
      <span
        class="StyledText-sc-1sadyjn-0 fqoiau"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 htzMXV FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kvJkVD"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gAZfpK StyledRadioButton-sc-g1f6ld-5 hNMTMW"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fhNmLR"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hBJvZo StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 beixsF"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 bMBtIZ"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 lpfmhn FormField__FormFieldBox-sc-m9hood-0 bNDIlh RadioInput__StyledFormField-sc-1brmdkl-0 kpNcUU"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 htzMXV FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kvJkVD"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gAZfpK StyledRadioButton-sc-g1f6ld-5 hNMTMW"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fhNmLR"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hBJvZo StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 beixsF"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 bMBtIZ"
          >
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kVwhZo"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 lpfmhn FormField__FormFieldBox-sc-m9hood-0 bNDIlh RadioInput__StyledFormField-sc-1brmdkl-0 kpNcUU"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 htzMXV FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kvJkVD"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gAZfpK StyledRadioButton-sc-g1f6ld-5 hNMTMW"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fhNmLR"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hBJvZo StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 beixsF"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 bMBtIZ"
          >
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 heWbGB"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
